# uwildmat

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
benches/: inn.rs  inn_test_suite.rs  inn_test_suite_bench.rs  misc.rs
src/: build.rs  lib.rs  poison.rs  regular.rs  simple.rs
