[package]
name = "uwildmat"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"
license = "MIT"
readme = "README.md"
description = "Rust library for wildmat/uwildmat matching"
repository = "https://github.com/denizdogan/uwildmat"

[build-dependencies]
regex = "1"
reqwest = "0.11"
bytes = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "inn_test_suite_bench"
harness = false
