[package]
name = "uwildmat"
version = "0.3.0"
edition = "2021"
build = "src/build.rs"
license = "MIT"
readme = "README.md"
description = "Rust library for wildmat/uwildmat matching"
repository = "https://github.com/denizdogan/uwildmat"

[build-dependencies]
regex = "1"
reqwest = "0.11"
bytes = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "inn"
harness = false

[[bench]]
name = "misc"
harness = false
